index.html significant changes

--- a/index.html
+++ b/index.html
@@ -3,23 +3,40 @@
 
 <html>
 <head>
-<script>
-var c=document.getElementById("myCanvas");
-var ctx=c.getContext("2d");
-ctx.font="30px Arial";
-ctx.fillText("Sergey Kolbasov",10,50);
+<meta http-equiv="Content-Type" content="text/html;charset=utf-8" >
+<title>Project 1</title>
+<style>
+h1 {
+	text-align: center;
+}
+
+body{background-color:#D2CCB4; font-family: Arial;position:relative;left:33%;width:33%;text-align:justify;}
 
 
-
-</script>
+</style>
 </head>
 <body>
-<canvas id="myCanvas" width="200" height="100" style="border:1px solid#000000;">
-</canvas>
+
+  <div>
+    <h1>Sergey Kolbasov
+  <br/><a href="https://www.facebook.com/sergey.kolbasov" target="_TOP" title="Sergey Kolbasov"><img src="https://badge.facebook.com/badge/100001622505775.2370.1264281307.png" style="border: 0px" alt="Sergey`s photo"></a>
+<a href="https://www.facebook.com/badges/" target="_TOP" style="font-family: &quot;lucida grande&quot;,tahoma,verdana,arial,sans-serif; font-size: 11px; font-variant: normal; font-style: normal; font-weight: normal; color: #3B5998; text-decoration: none;"></a>
+</h1>
+  </div>
+<p><b>Bio</b></p>
+<p>
+Currently live in Moscow, Russia. Work as the the manager of the mobile division at Gazprom Inform LLC, a subsidiary of a Russian gas company Gazprom. Currently I am interested in mobile/Web technologies. The nearly full bio is inside Facebook and Linkedin profiles.
+</p>
+
+<p><b>Code editor</b></p>
+<p> This webpage is built with sublime text 3.</p>
+<a href="http://ru.linkedin.com/in/sergeykolbasov" style="text-decoration:none;"><span style="font: 80% Arial,sans-serif; color:#0783B6;"><img src="http://www.linkedin.com/img/webpromo/btn_in_20x15.png" width="20" height="15" alt="Sergey Kolbasov in LinkedIn" style="vertical-align:middle">Professional profile</span></a>
+
+
+
+
 
 </body>
-
-
 
 </html>
 
